force-app/main/default/objects/Event__c/fields/Event_Charges__c.field-meta.xml
<CustomField>
    <fullName>Event_Charges__c</fullName>
    <label>Event Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>