force-app/main/default/objects/Event__c/fields/Event_Organizer_Company__c.field-meta.xml
<CustomField>
    <fullName>Event_Organizer_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Organizer Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>