force-app/main/default/objects/Event__c/fields/Event_Title__c.field-meta.xml
<CustomField>
    <fullName>Event_Title__c</fullName>
    <label>Event Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>