force-app/main/default/objects/Event__c/fields/Event_Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>Event_Total_Duration__c</fullName>
    <formula>IF (FLOOR((Event_End_Date_and_Time__c  -Event_Start_Date_and_Time__c)) &gt; 0, TEXT(FLOOR((Event_End_Date_and_Time__c  -Event_Start_Date_and_Time__c)) ) &amp; &quot; Days &quot;, &quot;&quot;) 
&amp;
IF(FLOOR(MOD((Event_End_Date_and_Time__c  - Event_Start_Date_and_Time__c)* 24, 24 )) &gt; 0, TEXT(FLOOR(MOD((Event_End_Date_and_Time__c  -Event_Start_Date_and_Time__c)* 24, 24 ))) &amp; &quot; Hours &quot;,&quot;&quot;) 
 &amp; 
TEXT(ROUND(MOD((Event_End_Date_and_Time__c  -Event_Start_Date_and_Time__c)* 24 * 60, 60 ), 0)) &amp; &quot; Minutes &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Total Duration</label>
    <type>Text</type>
</CustomField>