force-app/main/default/objects/Event__c/validationRules/Validate_Event_Duration.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Event_Duration</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Event_Start_Date_and_Time__c)),
    NOT(ISBLANK(Event_End_Date_and_Time__c)),
    ((Event_End_Date_and_Time__c - Event_Start_Date_and_Time__c) * 1440) &lt; 30
)</errorConditionFormula>
    <errorMessage>Event Duration must not be less than 30 Minutes</errorMessage>
</ValidationRule>