force-app/main/default/objects/Event__c/validationRules/Validate_Images.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Images</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

   NOT(CONTAINS( Banner_Image__c ,&quot;.png&quot;)),
   NOT(CONTAINS( Event_Organizer_Company__r.Logo__c ,&quot;.png&quot;)),
   NOT(CONTAINS(Banner_Image__c ,&quot;.jpg&quot;)),
   NOT(CONTAINS( Event_Organizer_Company__r.Logo__c ,&quot;.jpg&quot;))

)</errorConditionFormula>
    <errorMessage>Please provide valid image Url</errorMessage>
</ValidationRule>